feat: backend updates; frontend updates
